# physical_ai_tools

./: .gitmodules  README.md
.github/workflows/: ros-ci.yml
data_collector/: CHANGELOG.rst  package.xml  setup.cfg  setup.py
data_collector/config/: ffw.json  joint_order.yaml  robot_config.yaml
data_collector/data_collector/: data_collect_manager.py  topic_to_data.py  topic_to_data_inspire.py  topic_to_data_omx.py  utils.py  (+1 more)
docker/: container.sh  docker-compose.yml
imitation_control/: package.xml  setup.cfg  setup.py
inference_manager/: CHANGELOG.rst  package.xml  setup.cfg  setup.py
inference_manager/config/: joint_order.yaml  joint_order_omx.yaml
inference_manager/inference_manager/: inference_manager.py  load_policy.py
inference_manager/launch/: inference_manager.launch.py
lerobot/: camera_test.py  pyproject.toml
lerobot_recorder/: README.md  package.xml  setup.py
model/: env.yaml  policy.pt
physical_ai_interfaces/: CHANGELOG.rst  CMakeLists.txt  package.xml
physical_ai_interfaces/msg/: TaskInfo.msg
physical_ai_interfaces/srv/: InferenceServerInfo.srv  SendCommand.srv  SendRecordingCommand.srv
physical_ai_manager/: .gitignore  CHANGELOG.rst  Dockerfile  FLUX_ARCHITECTURE.md  README.md  jest.config.js  nginx.conf  package-lock.json  package.json  setup.py
physical_ai_server/: CHANGELOG.rst  Dockerfile.amd64  Dockerfile.arm64  package.xml  setup.py
physical_ai_tools/: CHANGELOG.rst
policy_to_trajectory/: package.xml  setup.py
robot_data_subscriber/: package.xml  setup.cfg  setup.py
rosbag_recorder/: CMakeLists.txt  package.xml
(+189 files in other folders)
