<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>inference_manager</name>
  <version>0.3.2</version>
  <description>
    Convert predicted action to topics containing joint positions
  </description>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <license>Apache 2.0</license>
  <author email="kdy@robotis.com"> Dongyun Kim</author>
  <depend>rclpy</depend>
  <depend>builtin_interfaces</depend>
  <depend>std_msgs</depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
